[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mateo_st"
# Also update version in init and dockerfiles!
version = "1.4.1"
authors = [
    {name = "Bram Vanroy", email = "bramvanroy@hotmail.com"},
]
maintainers = [
    {name = "Bram Vanroy", email = "bramvanroy@hotmail.com"},
]
description = "An interface for machine translation evaluation"
readme = "README.md"
keywords = ["machine translation", "machine translation evaluation", "mt", "bleu", "comet", "bertscore", "bleurt", "chrf", "ter"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

requires-python = ">=3.10"
# When adding metrics from git, make sure to add the right commit in metrics_constants.py for the metric's 'version'
dependencies = [
    "altair==5.2.0",
    "bert-score==0.3.13",
    "BLEURT @ git+https://github.com/google-research/bleurt.git@cebe7e6f996b40910cfaa520a63db47807e3bf5c",
    "datasets==2.18.0",
    "evaluate==0.4.1",
    "huggingface_hub[hf_transfer]",
    "Levenshtein==0.25.0",
    "optimum==1.17.1",
    "pandas==2.2.1",
    "plotly==5.19.0",
    # Include ja/ko tokenization options
    "sacrebleu[ja,ko]==2.4.0",
    "sentencepiece==0.1.99",
    "streamlit==1.31.1",
    "tensorflow==2.15.0",
    "torch==2.2.1",
    "transformers==4.38.2",
    "unbabel-comet==2.2.2",
    "XlsxWriter==3.2.0"
]

[project.urls]
homepage = "https://github.com/BramVanroy/mateo-demo"
documentation = "https://github.com/BramVanroy/mateo-demo"
repository = "https://github.com/BramVanroy/mateo-demo.git"

[project.optional-dependencies]
dev = ["flake8", "black", "isort", "pytest-playwright"]

# TOOLS
[tool.setuptools]
include-package-data = true
license-files = ['LICEN[CS]E*']

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 119
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
ensure_newline_before_comments = true
line_length = 119
default_section = "FIRSTPARTY"
known_first_party = "mateo_st"
lines_after_imports = 2

# flake8 is in setup.cfg as it does not support toml:
# https://github.com/PyCQA/flake8/issues/234
