[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mateo_st"
# Also update version in init and dockerfiles!
version = "1.5.0"
authors = [
    {name = "Bram Vanroy", email = "bramvanroy@hotmail.com"},
]
maintainers = [
    {name = "Bram Vanroy", email = "bramvanroy@hotmail.com"},
]
description = "An interface for machine translation evaluation"
readme = "README.md"
keywords = ["machine translation", "machine translation evaluation", "mt", "bleu", "comet", "bertscore", "bleurt", "chrf", "ter"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

requires-python = ">=3.10"
# When adding metrics from git, make sure to add the right commit in metrics_constants.py for the metric's 'version'
dependencies = [
    "altair==5.5.0",
    "bert-score==0.3.13",
    "BLEURT@git+https://github.com/google-research/bleurt.git@cebe7e6f996b40910cfaa520a63db47807e3bf5c",
    "datasets==3.3.2",
    "evaluate==0.4.3",
    "huggingface_hub[hf_transfer]==0.29.2",
    "Levenshtein==0.27.1",
    "pandas==2.2.3",
    "plotly==5.24.1",
    # Include ja/ko tokenization options
    "sacrebleu[ja,ko]==2.5.1",
    "streamlit==1.42.2",
    "tensorflow==2.18.0",
    "torch==2.6.0",
    "transformers[sentencepiece]==4.49.0",
    "unbabel-comet==2.2.4",
    "XlsxWriter==3.2.2"
]

[project.urls]
homepage = "https://github.com/BramVanroy/mateo-demo"
documentation = "https://github.com/BramVanroy/mateo-demo"
repository = "https://github.com/BramVanroy/mateo-demo.git"

[project.optional-dependencies]
patch = ["beautifulsoup4"]
dev = ["mateo_st[patch]", "flake8", "black", "isort", "pytest-playwright"]

# TOOLS
[tool.setuptools]
include-package-data = true
license-files = ['LICEN[CS]E*']

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 119
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
ensure_newline_before_comments = true
line_length = 119
default_section = "FIRSTPARTY"
known_first_party = "mateo_st"
lines_after_imports = 2

# flake8 is in setup.cfg as it does not support toml:
# https://github.com/PyCQA/flake8/issues/234
