[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mateo_st"
# Also update version in init and dockerfiles!
version = "1.7.1"
authors = [
    {name = "Bram Vanroy", email = "bramvanroy@hotmail.com"},
]
maintainers = [
    {name = "Bram Vanroy", email = "bramvanroy@hotmail.com"},
]
description = "An interface for machine translation evaluation"
readme = "README.md"
keywords = ["machine translation", "machine translation evaluation", "mt", "bleu", "comet", "bertscore", "bleurt", "chrf", "ter"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

requires-python = ">=3.10"
# When adding metrics from git, make sure to add the right commit in metrics_constants.py for the metric's 'version'
dependencies = [
    "altair==5.5.0",
    "bert-score==0.3.13",
    "BLEURT@git+https://github.com/google-research/bleurt.git@cebe7e6f996b40910cfaa520a63db47807e3bf5c",
    "huggingface_hub[hf_transfer,hf_xet]==0.30.2",
    "Levenshtein==0.27.1",
    "pandas==2.2.3",
    "plotly==5.24.1",
    # Include ja/ko tokenization options
    "sacrebleu[ja,ko]==2.5.1",
    "streamlit==1.44.1",
    "tensorflow==2.19.0",
    # Also update TORCH_VERSION in dockerfile!
    "torch==2.7.0",
    "transformers[sentencepiece]==4.51.3",
    "unbabel-comet==2.2.6",
    "XlsxWriter==3.2.3"
]

[project.urls]
homepage = "https://github.com/BramVanroy/mateo-demo"
documentation = "https://github.com/BramVanroy/mateo-demo"
repository = "https://github.com/BramVanroy/mateo-demo.git"

[project.optional-dependencies]
patch = ["beautifulsoup4"]
dev = ["mateo_st[patch]", "ruff", "pytest-playwright"]

# TOOLS
[tool.setuptools]
include-package-data = true
license-files = ['LICEN[CS]E*']

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
ignore = ["C901", "E501", "E741", "F402", "F823", "E402"]
select = ["C", "E", "F", "W", "I"]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["commoncrawl_cc_annotation"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
